# ai_analytics

./: db.py  migrate.py  pyproject.toml  requirements.txt  schema.py  server.py  survey_data.csv  survey_motivasi_lari_anak_muda.csv  survey_self_tracking.csv  synthetic_data_motivation.ipynb  synthetic_data_running_cult.ipynb  synthetic_data_tracking_apps.ipynb  synthetic_respondent.csv  synthetic_self_tracking_survey.csv
