[project]
name = "ai-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg==0.30.0",
    "mcp[cli]==1.10.1",
]

[dependency-groups]
dev = [
    "pandas>=2.3.1",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.41",
]
